# llmserver-rs

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Readme.md  docker-compose.pgml.yml  docker-compose.supabase.yml
.github/workflows/: docker.yaml
assets/: admin-dashboard.html
assets/admin/: index.html
assets/config/: Vi-Qwen2-3B-RAG-rk3588-1.2.0.json  deepseek-1.5b.json  deepseek-7b.json  gemma-3-1b-it-rk3588-1.2.0.json  model-1.json  sensevoicesmall.json  simplerkllm.json  tinyllama-1.1b-chat.json
docs/: admin-console.md  control-plane.md  karma.md  pgml-admin.md
k8s/: deepseek-1.5b.yaml  deepseek-7b.yaml  gemma-3-1b-it-rk3588-1.2.0.yaml  sensevoicesmall.yaml
migrations/: 20250101000000_init.sql
src/: admin.rs  api_keys.rs  audio.rs  auth.rs  chat.rs  crypto.rs  database.rs  db.rs  encryption.rs  hf.rs  huggingface.rs  lib.rs  main.rs  manager.rs  models.rs  state.rs  token.rs  tokenizer.rs  tts.rs  utils.rs
src/admin/: mod.rs
src/admin/templates/: forms.html  header.html  login.html
src/ajeto/: mod.rs
src/asr/: simple.rs
src/knowledge/: karma.rs
src/llm/: mod.rs  simple.rs
src/tts/: simple.rs
