[package]
name = "llmserver-rs"
version = "0.1.1"
edition = "2021"

[patch.crates-io]
#rkllm-rs = { path = "../rkllm-rs"}
#sensevoice-rs = { path = "../sensevoice-rs"}
#autotokenizer = { path = "../auto-tokenizer"}

[dependencies]
utoipa = { version = "5.4.0", features = [ "actix_extras" ] }
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
actix-service = "2.0.3"
futures = "0.3.31"
tokio = "1.45.1"
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
rkllm-rs = "0.1.10"
autotokenizer = "0.1.2"
serde_variant = "0.1.3"
actix = "0.13.5"
tokio-stream = "0.1.17"
rand = "0.9.1"
hf-hub = "0.4.3"
clap = "4.5.39"
actix-multipart = "0.7.2"
sensevoice-rs = "0.1.2"
hound = "3.5.1"
actix-files = "0.6.6"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
uuid = { version = "1.11.0", features = ["v4"] }
argon2 = "0.5.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "uuid", "macros", "chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
tiktoken-rs = "0.6.0"
once_cell = "1.20.2"
derive_more = "0.99.18"
aes-gcm = { version = "0.10.3", features = ["aes256"] }
hex = "0.4.3"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
anyhow = "1.0.95"
