[package]
name = "llmserver-rs"
version = "0.1.1"
edition = "2021"

[patch.crates-io]
#rkllm-rs = { path = "../rkllm-rs"}
#sensevoice-rs = { path = "../sensevoice-rs"}
#autotokenizer = { path = "../auto-tokenizer"}

[dependencies]
utoipa = { version = "5.4.0", features = [ "actix_extras" ] }
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
actix-service = "2.0.3"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "sync"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
rkllm-rs = "0.1.10"
autotokenizer = "0.1.2"
serde_variant = "0.1.3"
actix = "0.13.5"
tokio-stream = "0.1.17"
rand = "0.9.1"
hf-hub = "0.4.3"
clap = "4.5.39"
actix-multipart = "0.7.2"
sensevoice-rs = "0.1.2"
hound = "3.5.1"
deadpool-postgres = { version = "0.12.1", features = ["serde"] }
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "with-chrono-0_4"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
anyhow = "1.0.95"
log = "0.4.25"
